<resources>
    <string name="app_name">Weather Provider</string>

    <string name="prefscreen_category_authentication_title">Settings</string>
    <string name="prefscreen_category_about_title">About</string>

    <string name="prefscreen_api_key_title">API key</string>
    <string name="prefscreen_api_key_summary">Your private API key to access %1$s weather data</string>
    <string name="prefscreen_create_key_title">Create account</string>
    <string name="prefscreen_create_key_summary">Create an account and generate your API key</string>
    <string name="api_key_not_set_message">You must set a private API key to use %1$s</string>
    <string name="api_key_changed_verification_warning">Your API key will be verified on the next weather update</string>

    <string name="api_key_state_verified">Verified</string>
    <string name="api_key_state_invalid">Invalid</string>
    <string name="api_key_state_pending_verification">Pending verification</string>

    <!-- Copyright and disclaimers -->
    <string name="prefscreen_disclaimer_title">Disclaimer</string>
    <string name="prefscreen_disclaimer_summary">The information provided by this application is provided for general information purposes only</string>
    <string name="copyright_title">Copyright</string>
    <string name="copyright_summary">OpenWeatherMap is a registered trademark of OpenWeatherMap Inc, both in the United States and internationally</string>


    <string name="prefscreen_temperature_unit">Temperature unit</string>
    <string name="prefscreen_temperature_unit_celsius">Celsius</string>
    <string name="prefscreen_temperature_unit_fahrenheit">Fahrenheit</string>
</resources>
